Updated Documentation for Namenode Setup